--- a/project/AutoYoutubePlaylist/AutoYoutubePlaylist.Gui/Features/EntryPoint/App.xaml
+++ b/project/AutoYoutubePlaylist/AutoYoutubePlaylist.Gui/Features/EntryPoint/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="AutoYoutubePlaylist.Gui.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:AutoYoutubePlaylist.Gui"
-             StartupUri="MainWindow.xaml">
+             StartupUri="../Main/View/Windows/MainWindow/MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
