--- a/project/AutoYoutubePlaylist/AutoYoutubePlaylist.Gui/Features/EntryPoint/App.xaml
+++ b/project/AutoYoutubePlaylist/AutoYoutubePlaylist.Gui/Features/EntryPoint/App.xaml
@@ -1,7 +1,8 @@
-﻿<Application x:Class="AutoYoutubePlaylist.Gui.App"
+﻿<Application x:Class="AutoYoutubePlaylist.Gui.Features.EntryPoint.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="../Main/View/Windows/MainWindow/MainWindow.xaml">
+             StartupUri="Features/Main/View/Windows/MainWindow/MainWindow.xaml"
+             Startup="Application_Startup">
     <Application.Resources>
          
     </Application.Resources>
