--- a/project/AutoYoutubePlaylist.Gui/Features/Main/View/Windows/MainWindow/MainWindow.xaml
+++ b/project/AutoYoutubePlaylist.Gui/Features/Main/View/Windows/MainWindow/MainWindow.xaml
@@ -1,9 +1,8 @@
-﻿<Window x:Class="AutoYoutubePlaylist.Gui.MainWindow"
+﻿<Window x:Class="AutoYoutubePlaylist.Gui.Features.Main.View.Windows.MainWindow.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:AutoYoutubePlaylist.Gui"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
